--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 .wrap {
-	background: rgba(252,217,229,0.4);
+	background: #ff83b5;
 	border: 1px solid rgba(56,47,50);
 	padding: 30px;
 	position: relative;
