--- a/style.css
+++ b/style.css
@@ -57,7 +57,6 @@ body {
 
 .wrap {
 	background: #ff83b5;
-	border: 1px solid rgba(56,47,50);
 	padding: 30px;
 	position: relative;
   border-radius: 4px;
@@ -89,10 +88,14 @@ body {
 }
 
 #logo h1 {
-	font-size: 30px;
-	letter-spacing: -0.04em;
-	margin: 0;
-	line-height: 1;
+  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-size: 1em;
+  font-style: italic;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -0.075em;
+  line-height: 1;
+  text-shadow: 0 0 0 #ff5c31, 0.0025em 0.0025em 0 #ff5c31, 0.005em 0.005em 0 #ff5c31, 0.0075em 0.0075em 0 #ff5c31, 0.01em 0.01em 0 #ff5c31, 0.0125em 0.0125em 0 #ff5c31, 0.015em 0.015em 0 #ff5c31, 0.0175em 0.0175em 0 #ff5c31, 0.02em 0.02em 0 #ff5c31, 0.0225em 0.0225em 0 #ff5c31, 0.025em 0.025em 0 #ff5c31, 0.0275em 0.0275em 0 #ff5c31, 0.03em 0.03em 0 #ff5c31, 0.0325em 0.0325em 0 #ff5c31, 0.035em 0.035em 0 #ff5c31, 0.0375em 0.0375em 0 #ff5c31, 0.04em 0.04em 0 #ff5c31, 0.0425em 0.0425em 0 #ff5c31, 0.045em 0.045em 0 #ff5c31, 0.0475em 0.0475em 0 #ff5c31, 0.05em 0.05em 0 #ff5c31, 0.0525em 0.0525em 0 #ff5c31, 0.055em 0.055em 0 #ff5c31, 0.0575em 0.0575em 0 #ff5c31, 0.06em 0.06em 0 #ff5c31, 0.0625em 0.0625em 0 #ff5c31, 0.065em 0.065em 0 #ff5c31, 0.0675em 0.0675em 0 #ff5c31, 0.07em 0.07em 0 #ff5c31, 0.0725em 0.0725em 0 #ff5c31, 0.075em 0.075em 0 #ff5c31, 0.0775em 0.0775em 0 #ff5c31, 0.08em 0.08em 0 #ff5c31, 0.0825em 0.0825em 0 #ff5c31, 0.085em 0.085em 0 #ff5c31, 0.0875em 0.0875em 0 #ff5c31, 0.09em 0.09em 0 #ff5c31, 0.0925em 0.0925em 0 #ff5c31, 0.095em 0.095em 0 #ff5c31, 0.0975em 0.0975em 0 #ff5c31, 0.1em 0.1em 0 #ff5c31;
 }
 
 #header .wrap {
