--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body {
 
 #logo h1 {
   font-family: 'Source Sans Pro', Arial, sans-serif;
-  font-size: 1em;
+  font-size: 30px;
   font-style: italic;
   color: #fff;
   text-transform: uppercase;
